fix eventpopup not showing at the top

--- a/src/components/EventPopup.css
+++ b/src/components/EventPopup.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 100;
+    z-index: 2002;
     backdrop-filter: blur(4px);
     padding: 15px;
     box-sizing: border-box;
